tests/resource/valid/definition/function_ret_super_in_class.mamba
class X:
    def some_higher_order(self, fun: Int -> Int) -> Int => fun(10)
    def fancy(self) -> Int? => self.some_higher_order(\x: Int => x * 2)

def x := X()
x.fancy()
